--- a/eSklep/web.config
+++ b/eSklep/web.config
@@ -37,7 +37,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="GarageEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LOCALHOST\SQLEXPRESS;initial catalog=Garage;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="GarageConnectionString" connectionString="Data Source=LOCALHOST\SQLEXPRESS;Initial Catalog=Garage;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="GarageEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GarageConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=c:\users\sebastian\documents\visual studio 2013\Projects\eSklep\eSklep\App_Data\baza.mdf;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
